fix issue with image being too big for popup

--- a/src/components/PinDrop/style.css
+++ b/src/components/PinDrop/style.css
@@ -44,13 +44,6 @@
 	}
 }
 
-.pin-info-img {
-	width: 100%;
-	object-fit: cover;
-	border-top-left-radius: 1rem;
-	border-top-right-radius: 1rem;
-}
-
 .pin-info-content {
 	padding: 1rem;
 }
